--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Stock Average Calculator, helps you to calculate the average of your stocks before buying/selling">
     <title>Stock Average Calculator</title>
     <style>
         body {
@@ -37,6 +39,25 @@
             justify-content: space-between;
             align-items: end;
             gap: 10px;
+        }
+
+        #avg-with-icon {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        #icon {
+            font-size: 2rem;
+            transition: all .5s ease;
+        }
+
+        .inc {
+            transform: rotateZ(90deg);
+        }
+
+        .dec {
+            transform: rotateZ(-90deg);
         }
 
         input[type=number] {
@@ -86,7 +107,7 @@
 </head>
 
 <body>
-    <form action="">
+    <form id="sform" action="">
         <div id="container">
             <div class="title">Owned Stock Info</div>
             <div class="sub-con">
@@ -94,7 +115,7 @@
                 <input type="number" name="curr-avg" id="curr-avg">
             </div>
             <div class="sub-con">
-                <span>No. of Shares:</span>
+                <span>Quantity:</span>
                 <input type="number" name="avg-count" id="avg-count">
             </div>
             <div: class="title">Buying Share Info</div:>
@@ -108,16 +129,22 @@
             </div>
             <div class="sub-con avg-con">
                 <span>New Average:</span>
-                <div id="average">0</div>
+                <div id="avg-with-icon">
+                    <div id="average"></div>
+                    <div id="icon"> &leftarrow;</div>
+                </div>
             </div>
             <div class="sub-con">
-                <input type="reset" value="Reset">
+                <input type="button" value="Reset" onclick="reInit()">
                 <input type="button" value="Calculate" onclick="calAverage()">
             </div>
         </div>
     </form>
     <script>
-        var curr_avg, avg_count, curr_price, buy_count, average = 0;
+        var curr_avg, avg_count, curr_price, buy_count, average;
+        var avgEle = document.querySelector("#average")
+        var iElement = document.querySelector("#icon")
+
         document.querySelector("#curr-avg").addEventListener("change", function (e) {
             curr_avg = makeInt(e.target.value)
         })
@@ -135,10 +162,44 @@
             return parseFloat(str)
         }
 
+        function reInit() {
+            document.querySelector("#sform").reset()
+            curr_avg = 0
+            avg_count = 0
+            curr_price = 0
+            buy_count = 0
+            average = 0
+            avgEle.innerHTML = "0"
+            iElement.classList.remove("inc")
+            iElement.classList.remove("dec")
+        }
+        reInit()
+
+        function isEmpty() {
+            return curr_avg == 0 || avg_count == 0 || curr_price == 0 || buy_count == 0
+        }
+
         function calAverage() {
+            if (isEmpty()) {
+                avgEle.innerHTML = "0"
+                iElement.classList.remove("inc")
+                iElement.classList.remove("dec")
+                return
+            }
             var new_count = avg_count + buy_count
             average = ((curr_avg * avg_count) + (curr_price * buy_count)) / new_count
-            document.querySelector("#average").innerHTML = average.toFixed(2)
+            avgEle.innerHTML = average.toFixed(2)
+            if (average == curr_avg) {
+                iElement.classList.remove("inc")
+                iElement.classList.remove("dec")
+            } else if (average > curr_avg) {
+                iElement.classList.remove("dec")
+                iElement.classList.add("inc")
+            }
+            else {
+                iElement.classList.remove("inc")
+                iElement.classList.add("dec")
+            }
         }
     </script>
 </body>
